# ts-converter

./: .gitignore  README.md  meson.build
resource/: converterapp.gresource.xml  list.ui  menu.ui  window.ui
src/: converter-app-win.c  converter-app-win.h  converter-app.c  converter-app.h  converter-emitter.c  converter-emitter.h  converter-filelist.c  converter-filelist.h  converterapp.c  converterapp.h  converterappwin.c  converterappwin.h  filelist.c  filelist.h  main.c  merge-emitter.c  merge-emitter.h
